fixed resizing gap issue

--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -15,6 +15,8 @@
 
 .main-page-img{
     height: 100vh;
+    flex: 1;
+    position: relative;
 }
 
 .main-page-img img{
@@ -32,7 +34,8 @@
     justify-content: flex-start;
     text-align: center;
     align-items: center;
-    gap: 15%;
+    position: relative;
+    z-index: 2;
 }
 
 
@@ -43,26 +46,39 @@
     background-color: black;
     width: 100%;
     margin: 0;
-    padding: 0 0 1.5rem 0;
-
+    padding: 0 0 1rem 0;
+    z-index: 3;
 }
 
-
-@media (max-width: 1100px) {
-  .page-name-section {
-    position: absolute;
-    /* inset: 0; */
+#signin-with-back-cont{
     display: flex;
-    width: 100%;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: rgba(0,0,0,0);
-    color: white;
-    z-index: 2;
-    margin: 0;
-    gap: 3rem;
-  }
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+}
+
+@media (max-width: 1100px) {
+    .first-section-cont{
+        flex-direction: column;
+        background-color: transparent;
+        height: 100vh;
+    }
+
+    .main-page-img{
+        height: 100%;
+    }
+
+    .page-name-section{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        justify-content: center;
+    }
   
 }
 
